sincronitzar archetype per poder tancar versió #113